<resources>
    <string name="app_name">W-Safe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">"Your Safety is what Matters"</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="prototype">Prototype</string>
    <string name="todo">TODO</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="settings">About us</string>
    <string name="contact_us">Feedback</string>
    <string name="mobile">Mobile</string>
    <string name="emergency_number1">Emergency Number1</string>
    <string name="emergency_number2">Emergency Number2</string>
    <string name="title_activity_nplace">Map</string>
    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="textButton" translatable="false">Log-Out</string>
    <string name="textButton2" translatable="false">Send mail</string>
    <string name="textButton3" translatable="false">Don\'t Send mail</string>
    <string name="textTitle" translatable="false">A password reset mail has been sent to your mail,you need to logout and reset the password using the link to continue.</string>
    <string name="textTitle2" translatable="false">Send password reset email to registered mail?</string>

</resources>