<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/indigo_daisy"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tv_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/tag"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/your_name"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textSize="15sp" />



            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/et_mob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_custom"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="15sp" />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_en1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/emergency_number1"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/slc_cnt"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@id/et_en1"
        app:srcCompat="@drawable/ic_acnt"
        android:layout_alignRight="@id/et_en1" />
</RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_en2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_custom"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/emergency_number2"
        android:inputType="phone"
        android:padding="15dp"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/slc_cnt2"
        android:layout_width="38dp"
        android:layout_height="45dp"
        android:layout_alignEnd="@id/et_en2"
        app:srcCompat="@drawable/ic_acnt"
        android:layout_alignRight="@id/et_en2" />
</RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="371dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="354dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="371dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_repassword"
                    android:layout_width="354dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/et_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/re_type_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="15sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_custom"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintBottom_toTopOf="@id/swipeLeft"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/swipeLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/swipe_right_for_login"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:layout_marginLeft="180dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>